# Django-TODO-Project

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
AtaDjango/: asgi.py  settings.py  urls.py  wsgi.py
Django-TODO-Project-master/posts/: admin.py
Django-TODO-Project-master/profiles/: admin.py  forms.py  urls.py  views.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_date_joined.py  0003_customuser_username_alter_customuser_date_joined.py  0004_alter_customuser_date_joined.py  0005_alter_customuser_date_joined.py  0006_alter_customuser_date_joined.py  0007_alter_customuser_date_joined.py  0008_alter_customuser_date_joined.py  0009_alter_customuser_date_joined.py  0010_remove_customuser_username_and_more.py  0011_customuser_username_alter_customuser_date_joined.py  0012_alter_customuser_date_joined.py  0013_auto_20240101_1512.py  0014_auto_20240101_1518.py  0015_auto_20240101_1519.py  0016_alter_customuser_date_joined_and_more.py  0017_remove_customuser_username_customuser_user_name_and_more.py  0018_alter_customuser_date_joined.py
node/: package-lock.json  package.json  tailwind.config.js
posts/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_target_date.py  0003_alter_post_options.py  0004_alter_post_completed.py  0005_alter_post_options_alter_post_completed.py
profiles/: models.py  views.py
static/: styles.css
static/css/: output.css  style.css
templates/: base.html
(+42 files in other folders)
